[PPD-248] gestione stato: modified behavior and junit test
